--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h2 class="titulo">Educación</h2>
                     <div class="info-institucion">
                         <div class="foto">
-                            <img src="img/espol.png" alt="José Luis Massón">
+                            <img src="img/espol.png" alt="ESPOL">
                         </div>
                         <div class="informacion">
                             <h3 class="institucion">Universidad</h3>
@@ -83,7 +83,7 @@
                     <hr/>
                     <div class="info-institucion">
                         <div class="foto">
-                           <img src="img/uems_cuadrado.png"alt="José Luis Massón">
+                           <img src="img/uems_cuadrado.png"alt="UEMS">
                         </div>
                         <div class="informacion">
                             <h3 class="institucion">Colegio</h3>
